# csad2526KI404HutovychOrestBohdanovich10

./: CMakeLists.txt  README.md  baud_gen.v  ci.cmd  ci.sh  main.cpp  uart_rx.v  uart_tb.v  uart_tx.v
.github/workflows/: ci.yml
tests/: unit_tests.cpp
